--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -30,7 +30,7 @@
           type="text"
           id="name"
           name="name"
-          class="block my-4 pe-0 w-full text-sm text-gray-600 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark: dark:border-gray-400 dark:focus:border-[#1ABC9C] focus:outline-none focus:ring-0 focus:border-[#1ABC9C] peer"
+          class="block my-4 pe-0 w-full text-sm text-gray-600 bg-transparent border-b-2 border-gray-300 appearance-none dark:border-gray-400 dark:focus:border-[#1ABC9C] focus:outline-none focus:ring-0 focus:border-[#1ABC9C] peer"
         />
       </div>
       <div class="relative mb-4">
@@ -46,7 +46,7 @@
           type="text"
           id="number"
           name="number"
-          class="block my-4 pe-0 w-full text-sm text-gray-600 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark: dark:border-gray-400 dark:focus:border-[#1ABC9C] focus:outline-none focus:ring-0 focus:border-[#1ABC9C] peer"
+          class="block my-4 pe-0 w-full text-sm text-gray-600 bg-transparent border-b-2 border-gray-300 appearance-none dark:border-gray-400 dark:focus:border-[#1ABC9C] focus:outline-none focus:ring-0 focus:border-[#1ABC9C] peer"
         />
       </div>
       <div class="relative mb-4">
@@ -62,7 +62,7 @@
           type="email"
           id="email"
           name="email"
-          class="block my-4 pe-0 w-full text-sm text-gray-600 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark: dark:border-gray-400 dark:focus:border-[#1ABC9C] focus:outline-none focus:ring-0 focus:border-[#1ABC9C] peer"
+          class="block my-4 pe-0 w-full text-sm text-gray-600 bg-transparent border-b-2 border-gray-300 appearance-none dark:border-gray-400 dark:focus:border-[#1ABC9C] focus:outline-none focus:ring-0 focus:border-[#1ABC9C] peer"
         />
       </div>
       <div class="relative mb-4">
@@ -80,11 +80,11 @@
           type="email"
           id="email"
           name="email"
-          class="block my-4 pe-0 w-full text-sm text-gray-600 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark: dark:border-gray-400 dark:focus:border-[#1ABC9C] focus:outline-none focus:ring-0 focus:border-[#1ABC9C] peer"
+          class="block my-4 pe-0 w-full text-sm text-gray-600 bg-transparent border-b-2 border-gray-300 appearance-none dark:border-gray-400 dark:focus:border-[#1ABC9C] focus:outline-none focus:ring-0 focus:border-[#1ABC9C] peer"
         />
       </div>
       <button
-        class="text-white mt-8 bg-[#1ABC9C] border-0 py-2 px-6 focus:outline-none hover:bg-[#1ABC9C] rounded text-lg w-1/2 lg:w-1/3 md:w-1/2 sm:3/4"
+        class="text-white mt-8 bg-[#1ABC9C] py-2 px-6 focus:outline-none hover:bg-[#1ABC9C] rounded text-lg w-1/2 lg:w-1/3 md:w-1/2 sm:3/4"
       >
         send Message
       </button>
