--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -20,9 +20,7 @@
         </a>
         <div class="px-5 pb-5 mx-7 my-5">
           <a href="#">
-            <h5
-              class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white"
-            >
+            <h5 class="text-xl font-semibold tracking-tight text-gray-900">
               Apple Watch Series 7 GPS, Aluminium Case, Starlight Sport
             </h5>
           </a>
@@ -90,7 +88,7 @@
             >
           </div>
           <div class="flex items-center justify-between">
-            <span class="text-3xl font-bold text-gray-900 dark:text-white"
+            <span class="text-3xl font-bold text-gray-900"
               >{{ product.price }}$</span
             >
             <a
