--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,40 +1,32 @@
 <section class="bg-[#1ABC9C] body-font py-24">
   <div
-    class="container mx-auto flex px-5 py-24 items-center justify-center flex-col"
+    class="container mx-auto flex flex-col items-center justify-center px-5 py-24"
   >
-    <div class="text-center px-32 lg:w-1/1 w-full">
+    <div class="text-center lg:w-3/4 w-full px-4">
       <h1 class="text-4xl uppercase text-white font-bold title-font sm:mb-4">
-        about component
+        About Component
       </h1>
-      <div class="flex justify-center items-center">
-        <span
-          class="inline-block h-1 w-20 rounded bg-white mt-6 mb-4 me-4"
-        ></span>
-        <i class="fa-solid fa-star mt-1 text-white"></i>
-        <span
-          class="inline-block h-1 w-20 rounded bg-white mt-6 mb-4 ms-4"
-        ></span>
+      <div class="flex justify-center items-center my-6">
+        <span class="inline-block h-1 w-20 rounded bg-white me-4"></span>
+        <i class="fa-solid fa-star text-white"></i>
+        <span class="inline-block h-1 w-20 rounded bg-white ms-4"></span>
       </div>
       <div class="flex flex-wrap text-white">
-        <div class="p-4 text-left md:w-2/4 w-full">
-          <div class="h-full">
-            <p class="mb-6">
-              Freelancer is a free bootstrap theme created by Route. The
-              download includes the complete source files including HTML, CSS,
-              and JavaScript as well as optional SASS stylesheets for easy
-              customization.
-            </p>
-          </div>
+        <div class="p-4 md:w-1/2 w-full">
+          <p class="mb-6">
+            Freelancer is a free bootstrap theme created by Route. The download
+            includes the complete source files including HTML, CSS, and
+            JavaScript as well as optional SASS stylesheets for easy
+            customization.
+          </p>
         </div>
-        <div class="p-4 text-left md:w-2/4 w-full">
-          <div class="h-full">
-            <p class="mb-6">
-              Freelancer is a free bootstrap theme created by Route. The
-              download includes the complete source files including HTML, CSS,
-              and JavaScript as well as optional SASS stylesheets for easy
-              customization.
-            </p>
-          </div>
+        <div class="p-4 md:w-1/2 w-full">
+          <p class="mb-6">
+            Freelancer is a free bootstrap theme created by Route. The download
+            includes the complete source files including HTML, CSS, and
+            JavaScript as well as optional SASS stylesheets for easy
+            customization.
+          </p>
         </div>
       </div>
     </div>
