--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,36 +1,40 @@
-<section class="bg-[#2C3E50] text-white body-font px-16">
+<section class="bg-[#2C3E50] text-white body-font px-4 md:px-16">
   <div class="container px-5 py-24 mx-auto">
-    <div class="flex justify-center flex-wrap gap-8 md:flex-nowrap">
-      <div class="lg:w-1/3 lg:mb-0 mb-6 p-4">
+    <div class="flex flex-wrap justify-center">
+      <div class="w-full lg:w-1/3 p-4">
         <div class="h-full text-center">
-          <h2 class="mb-2 text-3xl font-semibold">LOCATION</h2>
+          <h2 class="mb-2 text-2xl md:text-3xl font-semibold">LOCATION</h2>
           <p>2215 John Daniel Drive</p>
           <br />
           <p>Clark, MO 65243</p>
         </div>
       </div>
-      <div class="lg:w-1/3 lg:mb-0 mb-6 p-4">
+      <div class="w-full lg:w-1/3 p-4">
         <div class="h-full text-center">
-          <h2 class="mb-2 text-3xl font-semibold">AROUND THE WEB</h2>
-          <div class="">
+          <h2 class="mb-2 text-2xl md:text-3xl font-semibold">
+            AROUND THE WEB
+          </h2>
+          <div class="flex justify-center space-x-3">
             <i
-              class="fa-brands fa-facebook mx-1 border-[1px] rounded-full p-3 border-white"
+              class="fa-brands fa-facebook border-[1px] rounded-full p-3 border-white"
             ></i>
             <i
-              class="fa-brands fa-twitter mx-1 border-[1px] rounded-full p-3 border-white"
+              class="fa-brands fa-twitter border-[1px] rounded-full p-3 border-white"
             ></i>
             <i
-              class="fa-brands fa-linkedin-in mx-1 border-[1px] rounded-full p-3 border-white"
+              class="fa-brands fa-linkedin-in border-[1px] rounded-full p-3 border-white"
             ></i>
             <i
-              class="fa-solid fa-globe mx-1 border-[1px] rounded-full p-3 border-white"
+              class="fa-solid fa-globe border-[1px] rounded-full p-3 border-white"
             ></i>
           </div>
         </div>
       </div>
-      <div class="lg:w-1/3 lg:mb-0 p-4">
+      <div class="w-full lg:w-1/3 p-4">
         <div class="h-full text-center">
-          <h2 class="mb-2 text-3xl font-semibold">ABOUT FREELANCER</h2>
+          <h2 class="mb-2 text-2xl md:text-3xl font-semibold">
+            ABOUT FREELANCER
+          </h2>
           <p>
             Freelance is a free to use, licensed Bootstrap theme created by
             Route
@@ -41,6 +45,6 @@
   </div>
 </section>
 
-<section class="bg-[#1A252F] text-white text-center pt-4 pb-6">
+<section class="bg-[#1A252F] text-white text-center py-4">
   <p>Copyright © Your Website 2021</p>
 </section>
