--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,12 @@
 <header
   [ngClass]="isScroll ? 'pt-0 duration-500' : 'pt-2 duration-500'"
-  class="fixed inset-x-0 bg-[#2C3E50] body-font px-24 z-50"
+  class="fixed inset-x-0 bg-[#2C3E50] body-font px-6 lg:px-24 z-50"
 >
   <div
-    class="container mx-auto flex flex-nowrap justify-between items-center p-5 md:flex-row"
+    class="container text-center mx-auto flex justify-between items-center p-5"
   >
     <a
-      class="flex text-[22px] font-bold uppercase title-font items-center text-white mb-4 md:mb-0 md:text-[32px]"
+      class="text-[22px] font-bold uppercase title-font text-white md:text-[32px]"
       routerLink="home"
     >
       Start Framework
@@ -30,35 +30,31 @@
       </button>
     </div>
     <nav
-      [ngClass]="
-        isNavbarOpen
-          ? 'flex flex-col absolute top-full w-full inset-x-0 bg-[#2C3E50] '
-          : 'top-0 hidden'
-      "
-      class="text-md pb-4 font-bold text-white md:ml-auto items-center text-base justify-center lg:block"
+      [ngClass]="isNavbarOpen ? 'block' : 'hidden'"
+      class="lg:flex lg:items-center lg:static absolute w-full lg:w-auto top-full inset-x-0 bg-[#2C3E50] transition-all duration-500 ease-in-out"
     >
       <a
-        class="mr-2 px-4 py-2 rounded"
+        class="block py-2 px-4 text-white font-bold hover:bg-teal-500 rounded lg:inline lg:mr-4"
         routerLink="about"
         routerLinkActive="bg-teal-500"
         >ABOUT</a
       >
       <a
-        class="mr-2 px-4 py-2 rounded"
+        class="block py-2 px-4 text-white font-bold hover:bg-teal-500 rounded lg:inline lg:mr-4"
         routerLink="portfolio"
-        routerLinkActive="bg-teal-500   "
+        routerLinkActive="bg-teal-500"
         >PORTFOLIO</a
       >
       <a
-        class="mr-2 px-4 py-2 rounded"
+        class="block py-2 px-4 text-white font-bold hover:bg-teal-500 rounded lg:inline lg:mr-4"
         routerLink="gallery"
         routerLinkActive="bg-teal-500"
-        >Gallery</a
+        >GALLERY</a
       >
       <a
-        class="mr-2 px-4 py-2 rounded"
+        class="block py-2 px-4 text-white font-bold hover:bg-teal-500 rounded lg:inline lg:mr-4"
         routerLink="contact"
-        routerLinkActive="bg-teal-500   "
+        routerLinkActive="bg-teal-500"
         >CONTACT</a
       >
     </nav>
@@ -66,18 +62,14 @@
 </header>
 
 <nav
-  class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600"
+  class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600"
 >
-  <div
-    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
-  >
+  <div class="max-w-screen-xl mx-auto p-4 flex justify-between items-center">
     <div
-      class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1"
+      class="hidden md:flex md:items-center w-full md:w-auto md:order-1"
       id="navbar-sticky"
     >
-      <ul
-        class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
-      >
+      <ul class="flex flex-col md:flex-row md:space-x-8 font-medium">
         <li>
           <a
             href="#"
@@ -89,21 +81,21 @@
         <li>
           <a
             href="#"
-            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
+            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
             >About</a
           >
         </li>
         <li>
           <a
             href="#"
-            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
+            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
             >Services</a
           >
         </li>
         <li>
           <a
             href="#"
-            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
+            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
             >Contact</a
           >
         </li>
